# pmm_uav_planner

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
config/planner/: crazyflie.yaml  my_conf.yaml
config/waypoints/: cuboid.yaml  eight.yaml  hypotrochoid.yaml  my_traj.yaml  race.yaml  slalom.yaml
include/: pmm_mg_trajectory3d.hpp  pmm_trajectory.hpp
pmm_planner/: __init__.py  utils.py
scripts/: test_bindings.py
src/: bindings.cpp  bindings_backup.cpp  main.cpp  pmm_mg_trajectory3d.cpp
